# ChangeLog for dev-util/mercurial
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/mercurial/ChangeLog,v 1.124 2010/02/01 20:31:55 djc Exp $

*mercurial-1.4.3 (01 Feb 2010)

  01 Feb 2010; Dirkjan Ochtman <djc@gentoo.org> +mercurial-1.4.3.ebuild:
  Newly released 1.4.3.

  01 Feb 2010; Dirkjan Ochtman <djc@gentoo.org> -mercurial-1.2.1.ebuild,
  -mercurial-1.3.1-r1.ebuild:
  Remove old versions.

  29 Jan 2010; Raúl Porcel <armin76@gentoo.org> mercurial-1.4.1.ebuild:
  alpha/ia64/sparc wrt #299312

  27 Jan 2010; Raúl Porcel <armin76@gentoo.org> mercurial-1.4.1.ebuild,
  mercurial-1.4.2.ebuild:
  Add ~arm wrt #300753

  12 Jan 2010; <hwoarang@gentoo.org> mercurial-1.4.1.ebuild:
  Stable on amd64 wrt bug #299312

  07 Jan 2010; Joseph Jezak <josejx@gentoo.org> mercurial-1.4.1.ebuild:
  Marked ppc/ppc64 stable for bug #299312.

  06 Jan 2010; Jeroen Roovers <jer@gentoo.org> mercurial-1.4.1.ebuild:
  Stable for HPPA (bug #299312).

  03 Jan 2010; Dirkjan Ochtman <djc@gentoo.org> mercurial-1.4.1.ebuild,
  mercurial-1.4.2.ebuild:
  Install the optional hgeditor helper script (bug 297635).

  02 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  mercurial-1.4.1.ebuild:
  stable x86, bug 299312

*mercurial-1.4.2 (02 Jan 2010)

  02 Jan 2010; Dirkjan Ochtman <djc@gentoo.org> +mercurial-1.4.2.ebuild:
  Version bump to 1.4.2.

  24 Dec 2009; Dirkjan Ochtman <djc@gentoo.org> -mercurial-1.3.ebuild,
  -mercurial-1.3.1.ebuild, -mercurial-1.4.ebuild:
  Prune old versions.

  24 Dec 2009; Dirkjan Ochtman <djc@gentoo.org> mercurial-1.3.1-r1.ebuild,
  mercurial-1.4.ebuild, mercurial-1.4.1.ebuild, mercurial-9999.ebuild:
  Fix test runs failing for existent test dir (bug 297964).

*mercurial-1.4.1 (02 Dec 2009)

  02 Dec 2009; Dirkjan Ochtman <djc@gentoo.org> +mercurial-1.4.1.ebuild:
  Version bump to 1.4.1.

*mercurial-1.4 (16 Nov 2009)

  16 Nov 2009; Dirkjan Ochtman <djc@gentoo.org> +mercurial-1.4.ebuild: