@@ -2,8 +2,8 @@ AUX 70mercurial-gentoo.el 76 RMD160 1891ab510adb464211b4cc35c5b6e4b149da79fa SHA
 DIST mercurial-1.4.1.tar.gz 1917284 RMD160 cee744f59785a15d9ffa1f8e5b0b5bcfa23324e8 SHA1 e7a78a2b9e449ac8748d8a275f22862395c7d9a6 SHA256 86960cf3d8ca12624ab627e05391509c9b20d6b3ea4ff1ed636b40e14b1c885f
 DIST mercurial-1.4.2.tar.gz 1922947 RMD160 05eb8a8932adb1a4a530a08970d6cffb52f2a10b SHA1 6bc5d33624dae7db5dedae2c676f40b28b945763 SHA256 6c8605d970255ae947031a2752d8c1d519eee714df15acadb10899d4aa81c329
 DIST mercurial-1.4.3.tar.gz 1925613 RMD160 7dee2f0752befcec85f2d6b7ab87e2603aa94d76 SHA1 26ed2726b4a8886bbc5a1b3e0823ad252a13b991 SHA256 9cc820baaca3c385d98d6d0c0f54ce6ee4c7af0ef6e8aa8c71da2a48fb7a2a24
-EBUILD mercurial-1.4.1.ebuild 3387 RMD160 03ba86793a063fd648769594019e984bcbc72573 SHA1 2ebf948436f2a8e11073fa51c93f47127371c3b7 SHA256 cb60d39893897e66096fbca465b524589dd842a54ba6736eba03e8e8d83cef20
-EBUILD mercurial-1.4.2.ebuild 3387 RMD160 23ee655c3257bf0a16328676f56d7fe0a59114aa SHA1 173959e7999b1dabce8f55095274b83a916b6031 SHA256 749a32ef3ee14fd09438b329e0500a14ce0560fc1ad165117ba56236cc208aca
-EBUILD mercurial-1.4.3.ebuild 3383 RMD160 d14e5ce08c727c4e4eec7c19a1fc83bdb2b86262 SHA1 b1dd835e85f946d711b0b986afcbb86e1c43da93 SHA256 3a2ef1a71f5ed98cbe8c40288658a1ac87f3dde0fcef927882530b1f7201e144
-MISC ChangeLog 17833 RMD160 97608176b9212a4679d4a3addcf17c9757e7af10 SHA1 a33d1c33ce7cd9e9a56d689e774742c4b5f9d546 SHA256 8d140d8b0b5999a7c8314697141ce7765d9111f12e3f9e099f420bae325d0694
+EBUILD mercurial-1.4.1.ebuild 3385 RMD160 924c47c38e969d04f510d205e9848a87daae6ed0 SHA1 50a2f09ae7f901503703bc3b8385b59e5d3b6bf3 SHA256 a2d3eb41f125e2229908228c8eb94ff45213343c057790cdb2a4eea7ec75e21f
+EBUILD mercurial-1.4.2.ebuild 3384 RMD160 9eee75f32ed0bb7b60f8c1c7638ef0499d4aa4e9 SHA1 cb85c4823e6508678f38236556de0ece4d5e1ef6 SHA256 e67b2d557321ab83e2389d068feccf14de0cad6ab39451afcc48b3b443195d0e
+EBUILD mercurial-1.4.3.ebuild 3384 RMD160 56e6629ee88460262725d11a35aa550ce871a40e SHA1 8b9152331a13639ebf2772fd72d2240c8ab8033f SHA256 d9a82a1338c26a00dee0ffe5fdc098c62d04a6477fa35d63e7d587489cafbc1d
+MISC ChangeLog 18014 RMD160 3c1b1c9dc3d99f6bcbe906a8d20269e7f2ab423f SHA1 b33cc22f8a716f62e76f768d6109d932daf4b734 SHA256 500b0844e5033ceae9cc6fd3e39b5a06295b47e3da6378102d5b213d59e8c0d2
 MISC metadata.xml 559 RMD160 91e2d8be8351c35a2374bc06b20cdf7225050c1c SHA1 a64f9a2f4eda4463d453b2dcece61fd745a70932 SHA256 1cc655cef1ae81ba9147c29e6383215c043ea975db4c87213c7c9072173eae86
