@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/mercurial/mercurial-1.4.1.ebuild,v 1.9 2010/01/29 18:28:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/mercurial/mercurial-1.4.1.ebuild,v 1.10 2010/03/05 17:10:28 sping Exp $
 
 EAPI=2
 
@@ -113,7 +113,7 @@ pkg_postinst() {
 	elog "  dev-util/cvs"
 	elog "  dev-util/darcs"
 	elog "  dev-util/git"
-	elog "  dev-util/monotone"
+	elog "  dev-vcs/monotone"
 	elog "  dev-util/subversion"
 }
 
