@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/mercurial
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/mercurial/ChangeLog,v 1.124 2010/02/01 20:31:55 djc Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/mercurial/ChangeLog,v 1.125 2010/03/05 17:10:28 sping Exp $
+
+  05 Mar 2010; Sebastian Pipping <sping@gentoo.org> mercurial-1.4.1.ebuild,
+  mercurial-1.4.2.ebuild, mercurial-1.4.3.ebuild, mercurial-9999.ebuild:
+  Propagate move of monotone
 
 *mercurial-1.4.3 (01 Feb 2010)
 
